# vectors-in-orbit

./: .gitignore  Dockerfile.api  README.md  check_traffic.py  docker-compose.yml  f.json  id_helpers.py  kafka_broker.py  populate_user_db.py  products_builder.py  pyproject.toml  server.py  test_feed.py  test_real_scenarios.py  user_11.py  user_2.py
data_v1/: .~lock.lefties.csv#  jojo.csv  lefties(1).csv  lefties(2).csv  lefties.csv  mytek(1).csv  selected_pc_products.csv  tunisianet.csv  tunisianet_pc.csv  tunisianet_tv.csv
embedding_service/: Dockerfile  main.py  preload_models.py  requirements.txt
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  (+2 more)
mongo_backend/: .env.example  Dockerfile  api_requirements.txt  api_server.py  auth.py  config.py  db_connection.py  events.py  models.py  populate_users_from_qdrant.py  services.py
product_vectorizer/: Dockerfile  agent.py  config.py  events.py  helpers.py  kafka_product_consumer.py  requirements.txt  tools.py
rl_training/: README.md  __init__.py  config.py  requirements.txt  train.py
search_engine/: Dockerfile  config.py  constraints.py  embedding_client.py  feed.py  helpers.py  hybrid.py  intent.py  lexical.py  pipeline.py  requirements.txt  reranking.py  retrieval.py  server.py
user_profiler/: Dockerfile  __init__.py  agent.py  config.py  helpers.py  kafka_consumer.py  main.py  requirements.txt  server.py  tools.py  vector_db.py
user_simulation/: README.md  __init__.py  generate_training_data.py  requirements.txt  setup.sh  simulator.py
(+46 files in other folders)
