[project]
name = "nexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiokafka>=0.13.0",
    "bcrypt>=4.0.1",
    "en-core-web-sm",
    "fastapi>=0.123.10",
    "google-adk[extensions]>=1.22.1",
    "google-genai>=1.59.0",
    "google-generativeai>=0.8.6",
    "litellm>=1.75.5",
    "mistralai>=1.9.11",
    "passlib>=1.7.4",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
